Avoid race condition in determining if SSL is used in integration tests
The idea is to now always capture the output of the launched process in
order to determine whether it listens on SSL or not.
The previous mechanism trying the http could fail if the application didn't
start fast enough (which can easily happen when starting containers)